--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I am a 3rd year student in Boğaziçi Computer Engineering. I am trying to improve myself in game development. At the same time, I am proud to share what I have learned with you.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">I am a 4th year student in Boğaziçi Computer Engineering. I am trying to improve myself in game development. At the same time, I am proud to share what I have learned with you.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">My main goal is to create value by coming together with people who are willing to learn. Would you like to help me for this purpose? If your answer is yes, contact me as soon as possible.</p></div>
                 </div>
                 <!-- About Section Button-->
